[package]
name = "rmrk"
version = "0.6.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control", "reentrancy_guard", "psp34"] }

rmrk_minting = { path = "../minting", default-features = false }
rmrk_multiasset = { path = "../multiasset", default-features = false }
rmrk_nesting = { path = "../nesting", default-features = false }
rmrk_common = { path = "../common", default-features = false }
rmrk_equippable = { path = "../equippable", default-features = false }

# external contracts
rmrk_catalog = { path = "../catalog", default-features = false, features = ["ink-as-dependency"]}

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "openbrush/std",
    "rmrk_common/std",
    "rmrk_catalog/std",
    "rmrk_minting/std",
    "rmrk_multiasset/std",
    "rmrk_nesting/std",
    "rmrk_equippable/std",
]


