[package]
name = "rmrk"
version = "0.6.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

rmrk_storage = { path = "../storage", default-features = false }
rmrk_traits = { path = "../traits", default-features = false }
rmrk_minting = { path = "../minting", default-features = false }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "rmrk_storage/std",
    "rmrk_traits/std",
    "rmrk_minting/std",
]


